Added logout function

--- a/TestingSystem/WebContent/html/message/errorMessage.jspf
+++ b/TestingSystem/WebContent/html/message/errorMessage.jspf
@@ -5,6 +5,6 @@
 <div class="ui-widget">
 	<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;">
 		<p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
-		<strong>Error:</strong><%= errorMessage%></p>
+		<strong>Error:&nbsp;</strong><%= errorMessage%></p>
 	</div>
 </div>
