--- a/TestingSystem/WebContent/html/message/successMessage.jspf
+++ b/TestingSystem/WebContent/html/message/successMessage.jspf
@@ -1,10 +1,10 @@
 <%@include file="/html/init.jsp"%>
 <%
-	final String successMessage = TSUtil.getParameter(request, "successMessage", "Processed request successfully!");
+	final String successMessage = (String) TSUtil.getAttribute(request, "successMessage", "Processed request successfully!");
 %>
 <div class="ui-widget">
-	<div class="ui-state-error ui-corner-all" style="padding: 0 .7em;">
-		<p><span class="ui-icon ui-icon-alert" style="float: left; margin-right: .3em;"></span>
-		<strong>Error:</strong><%= successMessage%></p>
+	<div class="ui-state-highlight ui-corner-all" style="padding: 0 .7em;">
+		<p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+		<%= successMessage%></p>
 	</div>
 </div>
