--- a/TestingSystem/WebContent/html/user_details.jspf
+++ b/TestingSystem/WebContent/html/user_details.jspf
@@ -7,15 +7,31 @@
 	String fullName = user.getFname() + StringPool.SPACE + user.getLname();
 	
 	SimpleDateFormat formatter=new SimpleDateFormat("dd-MM-yyyy");
-	String date = formatter.format(user.getBdate());
+	
+	String date = "N/A";
+	
+	Date userBdate = user.getBdate();
+	
+	if(null != userBdate){
+		date = formatter.format(userBdate);
+	}
+	
 %>
 
-
-<div style="font-size: 2.5em; text-align: center">
-	<%=fullName%>'s User Details
+<div style="font-size: 2.5em;">
+	<div style="display: inline; text-align: left"><%=fullName%>'s User Details</div>
+	<div
+		style="display: inline; text-align: right; text-decoration: underline; float: right">
+		<a href="${user_management_url}">&lt;&lt;&nbsp;Back</a>
+	</div>
+	<hr>
 </div>
 
 <table>
+	<tr>
+		<td>User ID: </td>
+		<td><%=user.getUserId()%></td>
+	</tr>
 	<tr>
 		<td>First Name:</td>
 		<td><%=user.getFname()%></td>
@@ -30,7 +46,16 @@
 	</tr>
 	<tr>
 		<td>Mobile:</td>
-		<td><%=user.getMobile()%></td>
+		<td>
+			<c:choose>
+				<c:when test='<%=user.getMobile() == null %>'>
+					N/A
+				</c:when>
+				<c:otherwise>
+					<%=user.getAddress()%>
+				</c:otherwise>
+			</c:choose>
+		</td>
 	</tr>
 	<tr>
 		<td>Birthday:</td>
@@ -41,7 +66,7 @@
 		<td>
 			<c:choose>
 				<c:when test='<%=user.getAddress() == null %>'>
-					None
+					N/A
 				</c:when>
 				<c:otherwise>
 					<%=user.getAddress()%>
@@ -52,30 +77,38 @@
 	<tr>
 		<td>Accounts:</td>
 		<td>
-			<div class="CSSTableGenerator" >
-   				<table>
-   					<tr>
-   						<td>No.</td>
-   						<td>Account ID</td>
-   					</tr>
-   					<c:choose>
-   						<c:when test="<%=accountList.size() > 0 %>">
-   							<c:set var="count" value="0"/>
-							<c:forEach items="<%=accountList %>" var="account">
-								<tr>
-									<c:set var="count" value="${count + 1}"/>
-									<td>${count}.</td>
-									<td>${account.accId}</td>
-								</tr>
-							</c:forEach>
-   						</c:when>
-   						<c:otherwise>
-   							No accounts found!
-   						</c:otherwise>
-   					</c:choose>
-   					
-   				</table>
-   			</div>
+			<c:if test='<%=accountList.size() == 0 %>'>
+				No accounts found!
+			</c:if>
 		</td>
 	</tr>
 </table>
+<c:choose>
+	<c:when test="<%=accountList.size() > 0 %>">
+		<table id="hor-minimalist-b" summary="User Accounts">
+		    <thead>
+		    	<tr>
+		    		<th scope="col">No.</th>
+		        	<th scope="col">Account ID</th>
+		            <th scope="col">Role</th>
+		        </tr>
+		    </thead>
+		    <tbody>
+		    	<c:set var="count" value="0"/>
+				<c:forEach items="<%=accountList %>" var="account">
+					<tr>
+						<c:set var="count" value="${count + 1}"/>
+						<td>${count}.</td>
+						<td>${account.accId}</td>
+						<td>
+							<c:forEach items="${account.accountRoleMapsForAccId}" var="aRM">
+								${aRM.role.roleName}<br/>
+							</c:forEach>
+						</td>
+					</tr>
+				</c:forEach>
+		    </tbody>
+		</table>
+	</c:when>
+</c:choose>
+<div style="height: 40px"></div>
